--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -54,11 +54,11 @@
 
     <style name="Label">
         <item name="android:textColor">@android:color/black</item>
-        <item name="android:textSize">@dimen/text_small_size</item>
+        <item name="android:textSize">@dimen/text_medium_size</item>
     </style>
 
     <style name="ValueText">
-        <item name="android:textSize">@dimen/text_small_size</item>
+        <item name="android:textSize">@dimen/text_medium_size</item>
         <item name="android:clickable">false</item>
     </style>
 </resources>
