--- a/app/src/main/res/layout/fragment_categories.xml
+++ b/app/src/main/res/layout/fragment_categories.xml
@@ -6,31 +6,32 @@
     </data>
 
     <FrameLayout
-        android:background="@android:color/white"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <androidx.recyclerview.widget.RecyclerView
-            android:layout_marginTop="@dimen/extra_large_margin"
-            android:clipToPadding="false"
-            android:paddingBottom="@dimen/extra_large_margin"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_height="match_parent"
+        android:background="@android:color/white">
+
+        <androidx.recyclerview.widget.RecyclerView xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/rvCategories"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/extra_large_margin"
+            android:clipToPadding="false"
             android:orientation="vertical"
+            android:paddingBottom="@dimen/extra_large_margin"
+            android:visibility="visible"
             app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             app:reverseLayout="false"
-            android:visibility="visible"
-            app:spanCount="3"
+            app:spanCount="2"
             tools:itemCount="20"
             tools:listitem="@layout/item_category" />
+
         <ProgressBar
-            android:visibility="gone"
-            android:layout_width="wrap_content"
-            android:layout_gravity="center"
             android:id="@+id/pbLoading"
-            android:layout_height="wrap_content"/>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:visibility="gone" />
     </FrameLayout>
 
 </layout>
